--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.security.user.name = admin
-spring.security.user.password = admin
+# spring.security.user.name = admin
+# spring.security.user.password = admin
