Internal of spring security object and classes.
- User.
- UserDetails.
- Authentication.
- Principal.
- UserDetailsService.
- UserDetailsManger.
- Add ldap dependency.
- Add postgres configuration
- Setup the postgres and use the database users.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 # spring.security.user.name = admin
 # spring.security.user.password = admin
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring-security
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
